...
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lnm-7Y-drE">
                    <rect key="frame" x="16" y="88" width="382" height="0.0"/>
                    <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="34"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Insert Word" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fBD-Uk-sWR" customClass="CustomTextField" customModule="QuizChallenge" customModuleProvider="target">
                    <rect key="frame" x="16" y="108" width="382" height="50"/>
                    <color key="backgroundColor" name="QC_LightGray"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="50" id="FkX-gQ-0SW">
                            <variation key="heightClass=compact" constant="30"/>
                        </constraint>
...
